--- a/loja/package.json
+++ b/loja/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loja",
+  "name": "teste",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -29,7 +29,7 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.7",
+    "@angular/cli": "1.6.8",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
